Fixed spacing, render new data gen

--- a/public/styles.css
+++ b/public/styles.css
@@ -186,7 +186,7 @@ button {
 }
 
 .spaceOut>div {
-  margin: 15px 0 15px 0;
+  margin: 0 0 15px 0;
 }
 
 .up, .down {
